html and css home page commit

--- a/index.html
+++ b/index.html
@@ -1,232 +1,123 @@
 <!DOCTYPE html>
-<html lang="english">
+<html lang="pt-br">
 
 <head>
-  <title>exported project</title>
+  <title>Home Page</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta charset="utf-8" />
-  <meta property="twitter:card" content="summary_large_image" />
-  <style data-tag="reset-style-sheet">
-    html {
-      line-height: 1.15;
-    }
-
-    body {
-      margin: 0;
-    }
-
-    * {
-      box-sizing: border-box;
-      border-width: 0;
-      border-style: solid;
-    }
-
-    p,
-    li,
-    ul,
-    pre,
-    div,
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6,
-    figure,
-    blockquote,
-    figcaption {
-      margin: 0;
-      padding: 0;
-    }
-
-    button {
-      background-color: transparent;
-    }
-
-    button,
-    input,
-    optgroup,
-    select,
-    textarea {
-      font-family: inherit;
-      font-size: 100%;
-      line-height: 1.15;
-      margin: 0;
-    }
-
-    button,
-    select {
-      text-transform: none;
-    }
-
-    button,
-    [type="button"],
-    [type="reset"],
-    [type="submit"] {
-      -webkit-appearance: button;
-    }
-
-    button::-moz-focus-inner,
-    [type="button"]::-moz-focus-inner,
-    [type="reset"]::-moz-focus-inner,
-    [type="submit"]::-moz-focus-inner {
-      border-style: none;
-      padding: 0;
-    }
-
-    button:-moz-focus,
-    [type="button"]:-moz-focus,
-    [type="reset"]:-moz-focus,
-    [type="submit"]:-moz-focus {
-      outline: 1px dotted ButtonText;
-    }
-
-    a {
-      color: inherit;
-      text-decoration: inherit;
-    }
-
-    input {
-      padding: 2px 4px;
-    }
-
-    img {
-      display: block;
-    }
-
-    html {
-      scroll-behavior: smooth
-    }
-  </style>
-  <style data-tag="default-style-sheet">
-    html {
-      font-family: Inter;
-      font-size: 16px;
-    }
-
-    body {
-      font-weight: 400;
-      font-style: normal;
-      text-decoration: none;
-      text-transform: none;
-      letter-spacing: normal;
-      line-height: 1.15;
-      color: var(--dl-color-gray-black);
-      background-color: var(--dl-color-gray-white);
-
-      null
-    }
-  </style>
-  <link rel="stylesheet" href="https://unpkg.com/animate.css@4.1.1/animate.css" />
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
-    data-tag="font" />
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
-    data-tag="font" />
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
-    data-tag="font" />
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
-    data-tag="font" />
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
-    data-tag="font" />
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
-    data-tag="font" />
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
-    data-tag="font" />
-  <link rel="stylesheet" href="https://unpkg.com/@teleporthq/teleport-custom-scripts/dist/style.css" />
+  <link rel="stylesheet" href="assets/css/index.css" />
 </head>
 
+<header>
+  <div class="cabecalhoGradiente">
+    <span>
+      <img alt="LogoRRL" src="public/external/logoRRL.png" />
+      <h1>RRL</h1>
+      <h2>Sua página de divulgação de campanhas sociais</h2>
+    </span>
+    <span class="redirecionamentos">
+      <a href="sobre-nos.html" target="_blank">Sobre Nós</a>
+    </span>
+    <span class="redirecionamentos">
+      <a href="como-ajudar.html" target="_blank">Como Ajudar</a>
+    </span>
+    <span class="redirecionamentos">
+      <a href="contato.html" target="_blank">Contato</a>
+    </span>
+    <span class="redirecionamentos">
+      <a href="faq.html" target="_blank">FAQ</a>
+    </span>
+    <span class="redirecionamentos">
+      <a href="area-logada.html" target="_blank">Login</a>
+    </span>
+  </div>
+</header>
+
 <body>
-  <link rel="stylesheet" href="assets/css/style.css" />
-  <div>
-    <link href="assets/css/index.css" rel="stylesheet" />
-    <div class="home-page-container">
-      <div class="home-page-home-page">
-        <div class="home-page-frame1321316142">
-          <div class="home-page-copy"><span class="home-page-text Title"><span>RRL</span></span><span
-              class="home-page-text02 Subheading"><span>Sua página de divulgação de campanhas sociais</span></span>
-          </div>
-        </div>
-        <div class="home-page-image-dragintofill"><img alt="IMAGE9MarcoSite14259"
-            src="public/external/image9marcosite14259-dr1a-1300w.png" class="home-page-image9-marco-site1" /></div>
-        <div class="home-page-heading"><span class="home-page-text04 Heading"><span>Nossa principal
-              campanha:</span></span><span class="home-page-text06 Subheading"><span>Junho Vermelho - Prefeitura de
-              Curitiba</span></span></div>
-        <div class="home-page-heading1"><span class="home-page-text08 Heading"><span>Demais
-              campanhas:</span></span><span class="home-page-text10 Subheading"><span>Disponíveis na sua região e no
-              Brasil</span></span></div>
-        <div class="home-page-cards">
-          <div class="home-page-customer-quote"><span class="home-page-text12 Bodytext"><span>Campanha do
-                Agasalho</span></span>
-            <div class="home-page-avatar"><img alt="Avatar4189" src="public/external/avatar4189-47w-200w.png"
-                class="home-page-avatar1" />
-              <div class="home-page-frame2610301"><span
-                  class="home-page-text14 Smalltext"><span>Unicesumar</span></span><span
-                  class="home-page-text16 Smalltext"><span>Instituição de Ensino Privada</span></span></div>
-            </div>
-          </div>
-          <div class="home-page-customer-quote1"><span class="home-page-text18 Bodytext"><span>Doe Amor, Doe
-                Ração</span></span>
-            <div class="home-page-avatar2"><img alt="Avatar113" src="public/external/avatar113-0f8a-200h.png"
-                class="home-page-avatar3" />
-              <div class="home-page-frame26103011"><span class="home-page-text20 Smalltext"><span>Prefeitura de
-                    Curitiba</span></span><span class="home-page-text22 Smalltext"><span>Rede de Proteção
-                    Animal</span></span></div>
-            </div>
-          </div>
-          <div class="home-page-customer-quote2"><span class="home-page-text24 Bodytext"><span>Ação beneficiária
-                Cotolengo</span></span>
-            <div class="home-page-avatar4"><img alt="Avatar4203" src="public/external/avatar4203-llwk-200h.png"
-                class="home-page-avatar5" />
-              <div class="home-page-frame26103012"><span
-                  class="home-page-text26 Smalltext"><span>Cotolengo</span></span><span
-                  class="home-page-text28 Smalltext"><span>Hospital Cotolengo</span></span></div>
-            </div>
-          </div>
-        </div>
-        <div class="home-page-navigation">
-          <div class="home-page-items"><span class="home-page-text30 Bodytext"><span><a href="sobre-ns.html">Sobre
-                  Nós</a></span></span><span class="home-page-text32 Bodytext"><span><a href="como-ajudar.html">Como
-                  Ajudar</a></span></span><span class="home-page-text34 Bodytext"><span><a
-                  href="contato.html">Contato</a></span></span><span class="home-page-text36 Bodytext"><span><a
-                  href="faq.html">FAQ</a></span></span>
-            <div class="home-page-login"><span class="home-page-text38 Bodytext"><span><a
-                    href="cadastrar-usuario.html">Login</a></span></span></div>
-          </div>
-        </div>
-        <div class="home-page-navigation-footer">
-          <div class="home-page-items1"><span class="home-page-text40 Smalltext"><span>Como Ajudar</span></span><span
-              class="home-page-text42 Smalltext"><span>Doações</span></span><span
-              class="home-page-text44 Smalltext"><span>Voluntariados</span></span><span
-              class="home-page-text46 Smalltext"><span>Instruções</span></span></div>
-          <div class="home-page-items2"><span class="home-page-text48 Smalltext"><span>Sobre Nós</span></span><span
-              class="home-page-text50 Smalltext"><span>Missão e Valores</span></span><span
-              class="home-page-text52 Smalltext"><span>Contato</span></span><span
-              class="home-page-text54 Smalltext"><span>FAQ</span></span></div>
-          <div class="home-page-social-icons"><button class="home-page-buttons-icon">
-              <div class="home-page-icon"><img alt="Icon4235" src="public/external/icon4235-mk24.svg"
-                  class="home-page-icon1" /></div>
-            </button><button class="home-page-buttons-icon1">
-              <div class="home-page-icon2"><img alt="Icon4240" src="public/external/icon4240-zvz8.svg"
-                  class="home-page-icon3" /></div>
-            </button><button class="home-page-buttons-icon2">
-              <div class="home-page-icon4"><img alt="Icon4245" src="public/external/icon4245-4gyq.svg"
-                  class="home-page-icon5" /></div>
-            </button><button class="home-page-buttons-icon3">
-              <div class="home-page-icon6"><img alt="Icon4250" src="public/external/icon4250-nboh.svg"
-                  class="home-page-icon7" /></div>
-            </button></div><img alt="Divider4253" src="public/external/divider4253-kfrw.svg"
-            class="home-page-divider" />
-        </div><img alt="imagem2024040121030128221616" src="public/external/imagem2024040121030128221616-0e3g-200h.png"
-          class="home-page-imagem202404012103012822" /><img alt="imagem202404012103012821163"
-          src="public/external/imagem202404012103012821163-m50e-200h.png" class="home-page-imagem202404012103012821" />
+  <div class="home-page-container">
+    <div class="home-page">
+
+      <img alt="doacaoSangue" src="public/external/doacaoSangue.png" />
+      <div class="home-page-heading">
+        <span>Nossa principal campanha:</span>
+        <span>Junho Vermelho - Prefeitura de Curitiba</span>
       </div>
+      <div>
+        <span>Demais campanhas:</span>
+        <span>Disponíveis na sua região e no Brasil</span>
+      </div>
+      <div class="home-page-cards">
+        <div class="home-page-customer-quote">
+          <img alt="Avatar4189" src="public/external/unicesumarLogo.png" />
+          <div>
+            <span>Campanha do Agasalho</span>
+            <span">Unicesumar</span>
+              <span>Instituição de Ensino Privada</span>
+          </div>
+        </div>
+        <div class="home-page-customer-quote">
+          <img alt="prefeituraLogo" src="public/external/prefeituraLogo.png" />
+          <div>
+            <span>Doe Amor, Doe Ração</span>
+            <span>Prefeitura de Curitiba</span>
+            <span>Rede de Proteção Animal</span>
+          </div>
+        </div>
+        <div class="home-page-customer-quote">
+          <img alt="cotolengoLogo" src="public/external/cotolengoLogo.png" class="home-page-avatar5" />
+          <div class="home-page-frame26103012">
+            <span>Ação beneficiária Cotolengo</span>
+            <span>Cotolengo</span>
+            <span>Hospital Cotolengo</span>
+          </div>
+        </div>
+      </div>
+      <div>
+        <div>
+          <span><a href="sobre-nos.html">Sobre Nós</a></span>
+          <span><a href="como-ajudar.html">Como Ajudar</a></span>
+          <span><a href="contato.html">Contato</a></span>
+          <span><a href="faq.html">FAQ</a></span>
+          <div>
+            <span><a href="cadastrar-usuario.html">Login</a></span>
+          </div>
+        </div>
+      </div>
+      <!-- Footer -->
+      <div>
+        <div>
+          <span>Como Ajudar</span>
+          <span>Doações</span>
+          <span>Voluntariados</span>
+          <span>Instruções</span>
+        </div>
+        <div>
+          <span>Sobre Nós</span>
+          <span>Missão e Valores</span>
+          <span>Contato</span>
+          <span>FAQ</span>
+        </div>
+        <div>
+          <button>
+            <div><img alt="iconFacebook" src="public/external/iconFacebook.svg" />
+            </div>
+          </button>
+          <button>
+            <div><img alt="iconLinkedIn" src="public/external/iconLinkedIn.svg" />
+            </div>
+          </button>
+          <button>
+            <div><img alt="iconYoutube" src="public/external/iconYoutube.svg" />
+            </div>
+          </button>
+          <button>
+            <div><img alt="iconInstagram" src="public/external/iconInstagram.svg" />
+            </div>
+          </button>
+        </div>
+        <img alt="dividerFooter" src="public/external/dividerFooter.svg" />
+      </div>
+      <img alt="LogoRRL" src="public/external/logoRRL.png" />
     </div>
   </div>
 </body>
