--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -2,7 +2,7 @@
 <html lang="english"></html>
 
 <head>
-  <title>Sobre-Ns - exported project</title>
+  <title>Sobre-Nos - exported project</title>
   <meta property="og:title" content="Sobre-Ns - exported project" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta charset="utf-8" />
