--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -36,26 +36,33 @@
     Vestibulum hendrerit augue vel egestas feugiat. In finibus nec tellus eget rhoncus. Maecenas nec ornare dolor. Nunc in interdum magna, a gravida tortor. Ut aliquam sapien viverra, euismod mi eu, ultricies orci. Quisque nec ullamcorper arcu, sed finibus enim. Proin mattis id magna quis pharetra. 
         </p>
     </div>
-    <div class="flex justify-center gap-8 mt-36 mb-60"> <!-- Aqui -->
-        <div class="flex flex-col justify-center items-center w-1/3 gap-16">
+    <div class="grid grid-cols-2 justify-center gap-8 mt-36 mb-60"> 
+        <div class="flex flex-col justify-center items-center gap-16">
             <img src="public/foto-bruno.png" alt="">
-            <div class="bg-gradient-to-r from-customBlue to-white space-y-2 rounded-xl w-full">
+            <div class="bg-gradient-to-r from-customBlue to-white space-y-2 rounded-xl w-2/3">
                 <p class="font-semibold text-4xl">Bruno Rezende de<br> Lima</p>
                 <p class="text-customButton text-xl">RA: 24081546-2<br> brezendelima@gmail.com</p>
             </div>
         </div>
-        <div class="flex flex-col justify-center items-center w-1/3 gap-16">
+        <div class="flex flex-col justify-center items-center gap-16">
             <img src="public/foto-eduardo.png" alt="">
-            <div class="bg-gradient-to-r from-customPink to-white space-y-2 rounded-xl w-full">
+            <div class="bg-gradient-to-r from-customPink to-white space-y-2 rounded-xl w-2/3">
                 <p class="font-semibold text-4xl">Eduardo Henrique<br> Ranucci Moreira</p>
                 <p class="text-customButton text-xl">RA: 23041732-2<br> eduardoranucci@outlook.com</p>
             </div>
         </div>
-        <div class="flex flex-col justify-center items-center w-1/3 gap-16">
+        <div class="flex flex-col justify-center items-center gap-16">
             <img src="public/foto-lucas.png" alt="">
-            <div class="bg-gradient-to-r from-customGray to-white space-y-2 rounded-xl w-full">
+            <div class="bg-gradient-to-r from-customGray to-white space-y-2 rounded-xl w-2/3">
                 <p class="font-semibold text-4xl">Lucas Leffel de<br> Lima Uchoa</p>
                 <p class="text-customButton text-xl">RA: 23026525-2<br> lucasleffel@gmail.com</p>
+            </div>
+        </div>
+        <div class="flex flex-col justify-center items-center gap-16">
+            <img src="public/foto-vitor.png" alt="">
+            <div class="bg-gradient-to-r from-customBlue to-white space-y-2 rounded-xl w-2/3">
+                <p class="font-semibold text-4xl">Victor Yuki<br> Matusita</p>
+                <p class="text-customButton text-xl">RA: 23010850-2<br> victormatusita@gmail.com</p>
             </div>
         </div>
     </div>
