--- a/login.html
+++ b/login.html
@@ -42,11 +42,11 @@
             <div class="flex gap-8">
                 <p class="flex flex-col gap-2">
                     <label class="font-medium" for="cpf">CPF</label>
-                    <input class="py-2.5 px-4 border-2 rounded-lg" type="number" id="cpf" placeholder="000.000.000-00">
+                    <input class="py-2.5 px-4 border-2 rounded-lg" type="text" id="cpf" placeholder="000.000.000-00">
                 </p>
                 <p class="flex flex-col gap-2">
                     <label class="font-medium" for="cnpj">CNPJ</label>
-                    <input class="py-2.5 px-4 border-2 rounded-lg" type="number" id="cnpj" placeholder="00.000.000/0000-00">
+                    <input class="py-2.5 px-4 border-2 rounded-lg" type="text" id="cnpj" placeholder="00.000.000/0000-00">
                 </p>
             </div> 
             <p class="flex flex-col gap-2">
