--- a/login.html
+++ b/login.html
@@ -51,11 +51,11 @@
             </div> 
             <p class="flex flex-col gap-2">
                 <label class="font-medium" for="email">Endereço de e-mail</label>
-                <input class="py-2.5 px-4 border-2 rounded-lg" type="email" id="email" placeholder="email@exemplo.com">
+                <input class="py-2.5 px-4 border-2 rounded-lg" type="email" id="email-cadastro" placeholder="email@exemplo.com">
             </p>   
             <p class="flex flex-col gap-2">
                 <label class="font-medium" for="senha">Senha</label>
-                <input class="py-2.5 px-4 border-2 rounded-lg" type="password" id="senha" placeholder="Senh@123!">
+                <input class="py-2.5 px-4 border-2 rounded-lg" type="password" id="senha-cadastro" placeholder="Senh@123!">
             </p>   
             <button type="submit" class="py-4 px-4 bg-black text-white text-xl font-medium rounded-lg hover:text-black hover:bg-slate-200 transition-colors duration-150 ease-in-out">Enviar</button>
         </form>
@@ -68,11 +68,11 @@
         <form class="flex flex-col gap-6 mt-8">
             <p class="flex flex-col gap-2">
                 <label class="font-medium" for="email">Endereço de e-mail</label>
-                <input class="py-2.5 px-4 border-2 rounded-lg" type="email" id="email" placeholder="email@exemplo.com">
+                <input class="py-2.5 px-4 border-2 rounded-lg" type="email" id="email-login" placeholder="email@exemplo.com">
             </p>   
             <p class="flex flex-col gap-2">
                 <label class="font-medium" for="senha">Senha</label>
-                <input class="py-2.5 px-4 border-2 rounded-lg" type="password" id="senha" placeholder="Senh@123!">
+                <input class="py-2.5 px-4 border-2 rounded-lg" type="password" id="senha-login" placeholder="Senh@123!">
             </p>   
             <button type="submit" class="py-4 px-4 bg-black text-white text-xl font-medium rounded-lg hover:text-black hover:bg-slate-200 transition-colors duration-150 ease-in-out">Enviar</button>
         </form>
@@ -103,5 +103,7 @@
       </ul>
     </div>
   </footer>
+
+  <script src="scripts/login.js"></script>
 </body>
 </html>
