Atualização Como Ajudar, FAQ, Sobre Nos
Remoção do lorem ipsum para textos reais

--- a/como-ajudar.html
+++ b/como-ajudar.html
@@ -33,29 +33,26 @@
         <div class="space-y-2 bg-gradient-to-r from-customBlue to-white rounded-xl">
             <h3 class="font-semibold text-4xl">Ações Sociais</h3>
             <p class="text-xl text-customButton">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eu nibh et risus venenatis semper a tempor urna. Sed bibendum lacus quis tincidunt pretium. Pellentesque cursus ante lacus, ac scelerisque tellus sagittis id. Vivamus mollis nulla eu sapien interdum, rhoncus convallis elit tristique. 
-        Vestibulum hendrerit augue vel egestas feugiat. In finibus nec tellus eget rhoncus. Maecenas nec ornare dolor. Nunc in interdum magna, a gravida tortor. Ut aliquam sapien viverra, euismod mi eu, ultricies orci. Quisque nec ullamcorper arcu, sed finibus enim. Proin mattis id magna quis pharetra. 
+                Participando das ações sociais divulgadas, você consegue auxiliar com seu tempo e trabalho. Sua ajuda pode ser a diferença para a vida de muitas pessoas.
+                Sopões para sem-teto são um bom exemplo de ações sociais que são divulgadas frequentemente na nossa plataforma.
             </p>
         </div>
         <div class="space-y-2 bg-gradient-to-r from-customPink to-white rounded-xl">
             <h3 class="font-semibold text-4xl">Trabalhos voluntariados</h3>
             <p class="text-xl text-customButton">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eu nibh et risus venenatis semper a tempor urna. Sed bibendum lacus quis tincidunt pretium. Pellentesque cursus ante lacus, ac scelerisque tellus sagittis id. Vivamus mollis nulla eu sapien interdum, rhoncus convallis elit tristique. 
-        Vestibulum hendrerit augue vel egestas feugiat. In finibus nec tellus eget rhoncus. Maecenas nec ornare dolor. Nunc in interdum magna, a gravida tortor. Ut aliquam sapien viverra, euismod mi eu, ultricies orci. Quisque nec ullamcorper arcu, sed finibus enim. Proin mattis id magna quis pharetra. 
+                Trabalhos voluntários são umas das melhores formas de contribuir com o seu tempo. Ao se voluntariar, você consegue ajudar de perto àqueles que mais precisam e realmente fazer a diferença na separação de doações, alimentando animais, auxiliando em abrigos, etc.
             </p>
         </div>
         <div class="space-y-2 bg-gradient-to-r from-customGray to-white rounded-xl">
             <h3 class="font-semibold text-4xl">Campanhas de Doação</h3>
             <p class="text-xl text-customButton">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eu nibh et risus venenatis semper a tempor urna. Sed bibendum lacus quis tincidunt pretium. Pellentesque cursus ante lacus, ac scelerisque tellus sagittis id. Vivamus mollis nulla eu sapien interdum, rhoncus convallis elit tristique. 
-        Vestibulum hendrerit augue vel egestas feugiat. In finibus nec tellus eget rhoncus. Maecenas nec ornare dolor. Nunc in interdum magna, a gravida tortor. Ut aliquam sapien viverra, euismod mi eu, ultricies orci. Quisque nec ullamcorper arcu, sed finibus enim. Proin mattis id magna quis pharetra. 
+                Doações de sangue, de alimentos, de roupas, brinquedos, enter outras doações também são ótimas maneiras de contribuir com o próximo. Se você tiver aquele brinquedo parado em casa ou aquela blusa que não serve mais, faça a sua parte e redistribua para quem mais precisa.
             </p>
         </div>
         <div class="space-y-2 bg-gradient-to-r from-customBlue to-white rounded-xl">
             <h3 class="font-semibold text-4xl">ONGs e demais instituições</h3>
             <p class="text-xl text-customButton">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eu nibh et risus venenatis semper a tempor urna. Sed bibendum lacus quis tincidunt pretium. Pellentesque cursus ante lacus, ac scelerisque tellus sagittis id. Vivamus mollis nulla eu sapien interdum, rhoncus convallis elit tristique. 
-        Vestibulum hendrerit augue vel egestas feugiat. In finibus nec tellus eget rhoncus. Maecenas nec ornare dolor. Nunc in interdum magna, a gravida tortor. Ut aliquam sapien viverra, euismod mi eu, ultricies orci. Quisque nec ullamcorper arcu, sed finibus enim. Proin mattis id magna quis pharetra. 
+                Caso você não possa contribuir fisicamente, sua doação em dinheiro também pode ser extremamente importante para garantir a sobrevivência de ONGs e demais instituições sem fins lucrativos. 
             </p>
         </div>
     </div>
