--- a/faq.html
+++ b/faq.html
@@ -33,29 +33,27 @@
         <div class="space-y-2 bg-gradient-to-r from-customBlue to-white rounded-xl">
             <h3 class="font-semibold text-4xl">As doações são anônimas?</h3>
             <p class="text-xl text-customButton">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eu nibh et risus venenatis semper a tempor urna. Sed bibendum lacus quis tincidunt pretium. Pellentesque cursus ante lacus, ac scelerisque tellus sagittis id. Vivamus mollis nulla eu sapien interdum, rhoncus convallis elit tristique. 
-        Vestibulum hendrerit augue vel egestas feugiat. In finibus nec tellus eget rhoncus. Maecenas nec ornare dolor. Nunc in interdum magna, a gravida tortor. Ut aliquam sapien viverra, euismod mi eu, ultricies orci. Quisque nec ullamcorper arcu, sed finibus enim. Proin mattis id magna quis pharetra. 
+                Sim, todas as doações são anônimas para que não haja nenhum tipo de diferenciação entre as doações e seus doadores.
             </p>
         </div>
         <div class="space-y-2 bg-gradient-to-r from-customPink to-white rounded-xl">
             <h3 class="font-semibold text-4xl">Posso promover minha própria campanha social?</h3>
             <p class="text-xl text-customButton">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eu nibh et risus venenatis semper a tempor urna. Sed bibendum lacus quis tincidunt pretium. Pellentesque cursus ante lacus, ac scelerisque tellus sagittis id. Vivamus mollis nulla eu sapien interdum, rhoncus convallis elit tristique. 
-        Vestibulum hendrerit augue vel egestas feugiat. In finibus nec tellus eget rhoncus. Maecenas nec ornare dolor. Nunc in interdum magna, a gravida tortor. Ut aliquam sapien viverra, euismod mi eu, ultricies orci. Quisque nec ullamcorper arcu, sed finibus enim. Proin mattis id magna quis pharetra. 
+                Sim, você pode! <br>
+                Tudo o que você vai precisar é se inscrever na nossa página e cadastrar a sua campanha social. Uma vez aprovada, você poderá começar a ajudar as pessoas!
             </p>
         </div>
         <div class="space-y-2 bg-gradient-to-r from-customGray to-white rounded-xl">
             <h3 class="font-semibold text-4xl">Qual o valor mínimo e máximo das doações?</h3>
             <p class="text-xl text-customButton">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eu nibh et risus venenatis semper a tempor urna. Sed bibendum lacus quis tincidunt pretium. Pellentesque cursus ante lacus, ac scelerisque tellus sagittis id. Vivamus mollis nulla eu sapien interdum, rhoncus convallis elit tristique. 
-        Vestibulum hendrerit augue vel egestas feugiat. In finibus nec tellus eget rhoncus. Maecenas nec ornare dolor. Nunc in interdum magna, a gravida tortor. Ut aliquam sapien viverra, euismod mi eu, ultricies orci. Quisque nec ullamcorper arcu, sed finibus enim. Proin mattis id magna quis pharetra. 
+                Não há um valor máximo, porém estipulamos um valor mínimo de transação de 1 (um) real.
             </p>
         </div>
         <div class="space-y-2 bg-gradient-to-r from-customBlue to-white rounded-xl">
             <h3 class="font-semibold text-4xl">Qual a diferença entre as campanhas sociais e os voluntariados?</h3>
             <p class="text-xl text-customButton">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eu nibh et risus venenatis semper a tempor urna. Sed bibendum lacus quis tincidunt pretium. Pellentesque cursus ante lacus, ac scelerisque tellus sagittis id. Vivamus mollis nulla eu sapien interdum, rhoncus convallis elit tristique. 
-        Vestibulum hendrerit augue vel egestas feugiat. In finibus nec tellus eget rhoncus. Maecenas nec ornare dolor. Nunc in interdum magna, a gravida tortor. Ut aliquam sapien viverra, euismod mi eu, ultricies orci. Quisque nec ullamcorper arcu, sed finibus enim. Proin mattis id magna quis pharetra. 
+                Campanhas sociais são desenvolvidas com o objetivo de arrecadar dinheiro para que determinado objetivo social possa ser cumprido. <br>
+                Já os voluntariados são trabalhos voluntários presenciais em que você dispoe do seu tempo para poder contribuir com a campanha.
             </p>
         </div>
     </div>
