--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -23,18 +23,28 @@
     </nav>
   </header> 
   <main class="m-20">
-    <div class="flex justify-center">
-      <div class="bg-gradient-to-r from-customBlue via-customPink to-customGray flex flex-col items-center w-8/12 rounded-xl shadow-xl gap-8">
-        <h1 class="font-bold text-6xl mt-4">RRL</h1>
-        <h2 class="text-customButton text-2xl mb-4">Quem são as pessoas que compõem a RRL?</h2>
+    <div class="mt-28 space-y-14">
+      <div class="flex justify-center">
+        <div class="bg-gradient-to-r from-customBlue via-customPink to-customGray flex flex-col items-center w-8/12 rounded-xl shadow-xl gap-8">
+          <h1 class="font-bold text-6xl mt-4">RRL</h1>
+          <h2 class="text-customButton text-2xl mb-4">Quem são as pessoas que compõem a RRL?</h2>
+        </div>
       </div>
-    </div>
-    <div class="mt-28 space-y-2 bg-gradient-to-r from-customBlue to-white rounded-xl">
-        <h3 class="font-semibold text-4xl">Missão e Valores</h3>
+      <div class="mt-28 space-y-2 bg-gradient-to-r from-customBlue to-white rounded-xl">
+          <h3 class="font-semibold text-4xl">Missão</h3>
+          <p class="text-xl text-customButton">Promover o bem-estar social e a inclusão através de campanhas inovadoras que mobilizem e empoderem comunidades, transformando vidas e construindo um futuro mais justo e solidário.
+          </p>
+      </div>
+      <div class="space-y-2 bg-gradient-to-r from-customPink to-white rounded-xl">
+        <h3 class="font-semibold text-4xl">Valores</h3>
         <p class="text-xl text-customButton">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eu nibh et risus venenatis semper a tempor urna. Sed bibendum lacus quis tincidunt pretium. Pellentesque cursus ante lacus, ac scelerisque tellus sagittis id. Vivamus mollis nulla eu sapien interdum, rhoncus convallis elit tristique. 
-    Vestibulum hendrerit augue vel egestas feugiat. In finibus nec tellus eget rhoncus. Maecenas nec ornare dolor. Nunc in interdum magna, a gravida tortor. Ut aliquam sapien viverra, euismod mi eu, ultricies orci. Quisque nec ullamcorper arcu, sed finibus enim. Proin mattis id magna quis pharetra. 
+          Empatia: Colocar-se no lugar do outro para entender e atender suas necessidades. <br>
+          Inovação: Buscar constantemente novas abordagens e soluções criativas.
+          Transparência: Agir com clareza e honestidade em todas as ações. <br>
+          Inclusão: Valorizar e respeitar a diversidade, promovendo a equidade.
+          Colaboração: Trabalhar em conjunto com parceiros e comunidades para maximizar o impacto.
         </p>
+    </div>
     </div>
     <div class="grid grid-cols-2 justify-center gap-8 mt-36 mb-60"> 
         <div class="flex flex-col justify-center items-center gap-16">
